JWT config + Seeder update

--- a/SimpleShop.API/appsettings.json
+++ b/SimpleShop.API/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=SimpleShop;Trusted_Connection=True;TrustServerCertificate=true;"
   },
+  "JwtSettings": {
+    "Issuer": "SimpleShop",
+    "Audience": "SimpleShop_Clients",
+    "SecretKey": "NaTymEtapieNieTrzebaRobicJakichsTurboSecureKey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
