Revert "JWT Completed."
This reverts commit d5697d65d9fa29215cc175a2414d712b0bdceaff.

--- a/SimpleShop.API/appsettings.json
+++ b/SimpleShop.API/appsettings.json
@@ -2,10 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=SimpleShop;Trusted_Connection=True;TrustServerCertificate=true;"
   },
-  "Jwt": {
-    "Key": "NaTymEtapieNieTrzebaRobicJakichsTurboSecureKey",
+  "JwtSettings": {
     "Issuer": "SimpleShop",
-    "Audience": "SimpleShop_Clients"
+    "Audience": "SimpleShop_Clients",
+    "SecretKey": "NaTymEtapieNieTrzebaRobicJakichsTurboSecureKey"
   },
   "Logging": {
     "LogLevel": {
