Final of Final 3.0

--- a/SimpleShop.API/appsettings.json
+++ b/SimpleShop.API/appsettings.json
@@ -2,10 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=SimpleShop;Trusted_Connection=True;TrustServerCertificate=true;"
   },
-  "JwtSettings": {
+  "Jwt": {
+    "Key": "NaTymEtapieNieTrzebaRobicJakichsTurboSecureKey",
     "Issuer": "SimpleShop",
-    "Audience": "SimpleShop_Clients",
-    "SecretKey": "NaTymEtapieNieTrzebaRobicJakichsTurboSecureKeys"
+    "Audience": "SimpleShop_Clients"
   },
   "Logging": {
     "LogLevel": {
